--- a/q/275630.html
+++ b/q/275630.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
-<tr d-ix="1"><td>080</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>426</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
+<tr d-ix="0"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
+<tr d-ix="1"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
+<tr d-ix="2"><td>080</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>484</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
 <tr d-ix="4"><td>212</td><td>Java 21</td><td>240921T115556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275670#275670">Juuz</a></td></tr>
 <tr d-ix="5"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
@@ -40,7 +40,39 @@
 <tr d-ix="11"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="12"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
+<p><a href="https://turbowarp.org/1070983410" rel="nofollow noreferrer">Try it here.</a></p>
+<p>Key-presses are really hard to manage well.</p>
+<p><strong>NOTE:</strong> This will not work in Scratch, because <code>backspace</code> is only detectable in TurboWarp.</p>
+<p><strong>NOTE:</strong> In the scratchblocks version and the picture, I used a custom block containing 1 argument. This was because I had to actually use the block rather than leave it as a function, and scratchblocks needs <em>something</em> in a custom block to recognize it as one. The project linked to will use an empty block, however.</p>
+<p><em>edit: translating into scratchblocks is HARD</em></p>
+<pre><code>define(
+set[i v]to(0
+repeat until&lt;(i)&gt;(9
+if&lt;key(i)pressed?&gt;then
+set[x v]to(join(x)[*
+stop[this script v]
+end
+change[i v]by(1
+end
+when gf clicked
+set[x v]to[
+repeat until&lt;(length of(x))=(4
+if&lt;&lt;key(any v)pressed?&gt;and&lt;not&lt;key(backspace v)pressed?&gt;&gt;&gt;then
+(
+end
+if&lt;key(backspace v)pressed?&gt;then
+set[j v]to((length of(x))-(2
+set[x v]to[
+repeat until&lt;(length of(x))&gt;(j
+set[x v]to(join(x)[*
+end
+end
+wait until&lt;not&lt;key(any v)pressed?
+</code></pre>
+<p><a href="https://i.sstatic.net/mLHW6meD.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/mLHW6meD.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>while(F&lt;4){cat(c('\b \b','*')[x&lt;-(nchar(k&lt;-cli::keypress())&gt;8&amp;F)-k%in%0:9]);F=F-x}
 </code></pre>
@@ -48,7 +80,7 @@
 <p>The <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> <code>cli</code> (command line interface) library indicates that <code>keypress()</code> &quot;currently only works at Linux/Unix and OSX terminals, and at the Windows command line&quot;, so unfortunately I don't know of an online site where this will run correctly.  It runs fine in my OSX terminal.</p>
 <p><code>keypress()</code> returns the character representing the key pressed, or a string representing 'special' keys, of which <code>&quot;backspace&quot;</code> is the only one with &gt;8 characters, so <code>nchar()&gt;8</code> saves 4 bytes compared to <code>==&quot;backspace&quot;</code> and 3 bytes compared to <code>grepl(&quot;ba&quot;,)</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> 80 bytes</h1>
+<div id="pu2" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> 80 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=return!value[3]&amp;&amp;!!((c=event.which)==8|47&lt;c&amp;c&lt;58)</code></pre>
@@ -74,37 +106,6 @@
 <li>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</li>
 <li>'preparation characters' (aka <code>'&quot;`~^</code>) also still seem to work unfortunately, even beyond four characters..</li>
 </ul>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 426 bytes</h1>
-<p><a href="https://turbowarp.org/1070983410" rel="nofollow noreferrer">Try it here.</a></p>
-<p>Key-presses are really hard to manage well.</p>
-<p><strong>NOTE:</strong> This will not work in Scratch, because <code>backspace</code> is only detectable in TurboWarp.</p>
-<p><strong>NOTE:</strong> In the scratchblocks version and the picture, I used a custom block containing 1 argument. This was because I had to actually use the block rather than leave it as a function, and scratchblocks needs <em>something</em> in a custom block to recognize it as one. The project linked to will use an empty block, however.</p>
-<pre><code>define(
-set[i v]to(0
-repeat until&lt;(i)&gt;(9
-if&lt;key(i v)pressed?&gt;then
-set[x v]to(join(x)[*
-stop[this script v]
-end
-change[i v]by(1
-end
-when gf clicked
-set[x v]to[
-repeat until&lt;(length of (x))=(4
-if&lt;&lt;key(any v)pressed?&gt;and&lt;not&lt;key(backspace v)pressed?&gt;&gt;&gt;then
-(
-end
-if&lt;key(backspace v)pressed?&gt;then
-set[j v]to((length of(x))-(2
-set[x v]to[
-repeat until&lt;(length of(x))&gt;(j
-set[x v]to(join(x)[*
-end
-end
-wait until&lt;not&lt;key(any v)pressed?
-</code></pre>
-<p><a href="https://i.sstatic.net/8Mq2IHRT.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/8Mq2IHRT.png" alt="code" /></a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 484 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{event::Key,input::TermRead,raw::IntoRawMode};fn main(){let a=stdin();let mut b=stdout().into_raw_mode().unwrap();let mut s=&quot;&quot;.to_owned();for c in a.keys(){match c.unwrap(){Key::Esc=&gt;break,Key::Char(k)=&gt;{if &quot;0123456789&quot;.contains(k){write!(b,&quot;*&quot;).unwrap();s.push(k)}}Key::Backspace=&gt;{write!(b,&quot;{}{}&quot;,termion::cursor::Left(1),termion::clear::AfterCursor).unwrap();s=s[..s.len()-1].to_string()}_=&gt;()}b.flush().unwrap();if s.len()&gt;3{break}}}
