--- a/q/63834.html
+++ b/q/63834.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>040</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
+<tr d-ix="0"><td>039</td><td>Rust</td><td>240813T002412Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274947#274947">bzr</a></td></tr>
 <tr d-ix="1"><td>031</td><td>JavaScript Node.js</td><td>240813T212004Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274963#274963">Andrew B</a></td></tr>
 <tr d-ix="2"><td>029</td><td>Bash</td><td>240813T141750Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274957#274957">wobtax</a></td></tr>
 <tr d-ix="3"><td>111</td><td>Setanta</td><td>240813T032403Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/274949#274949">bb94</a></td></tr>
@@ -53,7 +53,7 @@
 <tr d-ix="24"><td>046</td><td>Fortran GFortran</td><td>230103T205606Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/256307#256307">roblogic</a></td></tr>
 <tr d-ix="25"><td>007</td><td>Unix coreutils jot</td><td>230103T204642Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/256306#256306">roblogic</a></td></tr>
 <tr d-ix="26"><td>001</td><td>GNU sed 4.2.2 rn /dev/random</td><td>230102T183019Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/256277#256277">Ginger</a></td></tr>
-<tr d-ix="27"><td>010</td><td>Seed</td><td>221226T042806Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/256031#256031">apollyon</a></td></tr>
+<tr d-ix="27"><td>010</td><td>Seed</td><td>221226T042806Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/256031#256031">autumn</a></td></tr>
 <tr d-ix="28"><td>022</td><td>makina</td><td>221005T151701Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/252648#252648">Unit Tes</a></td></tr>
 <tr d-ix="29"><td>013</td><td>Knight</td><td>220807T023616Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/250761#250761">Aiden Ch</a></td></tr>
 <tr d-ix="30"><td>019</td><td>Factor + lists.lazy</td><td>220517T163516Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/247456#247456">chunes</a></td></tr>
@@ -257,10 +257,11 @@
 <tr d-ix="228"><td>005</td><td>Labyrinth</td><td>151114T130143Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63839#63839">Sp3000</a></td></tr>
 <tr d-ix="229"><td>004</td><td>Pyth</td><td>151114T124725Z</td><td><a href="https://codegolf.stackexchange.com/questions/63834/count-up-forever/63835#63835">Jakube</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> <s>45</s> 40 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>fn main(){for x in 1..{println!(&quot;{x}&quot;)}}
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>46</s> <s>45</s> <s>40</s> 39 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>fn main(){for x in 1..{print!(&quot;{x}
+&quot;)}}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWNzXS8hRyEzPzNDSr0_KLFCoUMvMUDPX0qguKMvNKcvIUNZSqK2qVNGtrIeqh2mDaAQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN9XT8hRyEzPzNDSr0_KLFCoUMvMUDPX0qguKMvNKFDWUqitquZQ0a2shyqG6YLoB" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 31 bytes</h1>
 
