--- a/q/272425.html
+++ b/q/272425.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Rust</td><td>240412T123009Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272516#272516">bzr</a></td></tr>
+<tr d-ix="0"><td>098</td><td>Rust</td><td>240412T123009Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272516#272516">bzr</a></td></tr>
 <tr d-ix="1"><td>004</td><td>Japt R</td><td>240814T131130Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/274971#274971">Shaggy</a></td></tr>
 <tr d-ix="2"><td>015</td><td>Trilangle</td><td>240519T223233Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/273189#273189">Bbrk24</a></td></tr>
 <tr d-ix="3"><td>027</td><td>AWK</td><td>240519T212442Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/273188#273188">C K</a></td></tr>
@@ -88,10 +88,10 @@
 <tr d-ix="59"><td>003</td><td>MathGolf</td><td>240409T125457Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272429#272429">Kevin Cr</a></td></tr>
 <tr d-ix="60"><td>006</td><td>APL+WIN</td><td>240409T124523Z</td><td><a href="https://codegolf.stackexchange.com/questions/272425/fixed-repeating-output/272428#272428">Graham</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 38 bytes</h1>
-<pre class="lang-rust prettyprint-override"><code>fn main(){let f=|n|&quot;1&quot;.repeat(n)+&quot;0&quot;;}
+<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, 98 bytes</h1>
+<pre class="lang-rust prettyprint-override"><code>fn main(){print!(&quot;{}{}&quot;,&quot;1&quot;.repeat(std::env::args().nth(1).unwrap().parse::&lt;usize&gt;().unwrap()),0)}
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN9XS8hRyEzPzNDSrc1JLFNJsa_JqlAyV9IpSC1ITSzTyNLWVDJSsayGqoZpgmgE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=m72kqLS4ZMGCpaUlaboWN5PS8hRyEzPzNDSrC4oy80oUNZSqa6trlXSUDJX0ilILUhNLNIpLUqysUvPKrKwSi9KLNTT18koyNAw19UrzyosSC4D8gsSi4lQrK5vS4syqVDsNhIymjoFmLcQmqIUwiwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 4 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>ò@gX
