--- a/q/275630.html
+++ b/q/275630.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
-<tr d-ix="1"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
-<tr d-ix="2"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
-<tr d-ix="3"><td>080</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>212</td><td>Java 21</td><td>240921T115556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275670#275670">Juuz</a></td></tr>
-<tr d-ix="5"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
-<tr d-ix="6"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
+<tr d-ix="0"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
+<tr d-ix="1"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
+<tr d-ix="2"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
+<tr d-ix="3"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
+<tr d-ix="4"><td>080</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>212</td><td>Java 21</td><td>240921T115556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275670#275670">Juuz</a></td></tr>
+<tr d-ix="6"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
 <tr d-ix="7"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
 <tr d-ix="8"><td>079</td><td>Ruby</td><td>240919T200321Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275655#275655">Jordan</a></td></tr>
 <tr d-ix="9"><td>086</td><td>C MSVC</td><td>240919T150244Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275643#275643">jdt</a></td></tr>
@@ -40,7 +40,25 @@
 <tr d-ix="11"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="12"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> 468 bytes</h1>
+<div id="pu0" class="pu"><h1>Python, 101 bytes</h1>
+<pre><code>import sys;s=0
+while s&lt;4:
+ c=sys.stdin.read(1)
+ s+=c.isdigit()-(c=='\x08')
+ print(&quot;*&quot;*s+'  ',end='\r')
+</code></pre>
+<p>This script only works on a terminal set to raw input mode.
+On UNIX, you can achieve this using <code>stty raw</code>.</p>
+<h3>Windows version, 102 bytes</h3>
+<pre><code>import msvcrt;s=0
+while s&lt;4:
+ c=msvcrt.getch()
+ s+=c.isdigit()-(c==b'\x08')
+ print(&quot;*&quot;*s+' ',end='\r')
+</code></pre>
+<p>This second version uses <code>msvcrt</code>, which is only available on Windows, but it does not require raw input mode.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> 468 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char,Esc},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut s)=(stdout().into_raw_mode().unwrap(),format!(&quot;&quot;));for c in stdin().keys(){match c.unwrap(){Esc=&gt;break,Char(k)=&gt;{if &quot;0123456789&quot;.contains(k){write!(o,&quot;*&quot;).unwrap();s.push(k)}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();s=s[..s.len()-1].into()}_=&gt;()}o.flush().unwrap();if s.len()&gt;3{break}}}
 </code></pre>
 <p>This solution uses <a href="https://crates.io/crates/termion" rel="nofollow noreferrer">Termion</a>, and so doesn't support Windows.</p>
@@ -79,7 +97,7 @@ fn main() {
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
 <p><a href="https://turbowarp.org/1070983410" rel="nofollow noreferrer">Try it here.</a></p>
 <p>Key-presses are really hard to manage well.</p>
 <p><strong>NOTE:</strong> This will not work in Scratch, because <code>backspace</code> is only detectable in TurboWarp.</p>
@@ -111,7 +129,7 @@ wait until&lt;not&lt;key(any v)pressed?
 </code></pre>
 <p><a href="https://i.sstatic.net/mLHW6meD.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/mLHW6meD.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>while(F&lt;4){cat(c('\b \b','*')[x&lt;-(nchar(k&lt;-cli::keypress())&gt;8&amp;F)-k%in%0:9]);F=F-x}
 </code></pre>
@@ -119,7 +137,7 @@ wait until&lt;not&lt;key(any v)pressed?
 <p>The <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> <code>cli</code> (command line interface) library indicates that <code>keypress()</code> &quot;currently only works at Linux/Unix and OSX terminals, and at the Windows command line&quot;, so unfortunately I don't know of an online site where this will run correctly.  It runs fine in my OSX terminal.</p>
 <p><code>keypress()</code> returns the character representing the key pressed, or a string representing 'special' keys, of which <code>&quot;backspace&quot;</code> is the only one with &gt;8 characters, so <code>nchar()&gt;8</code> saves 4 bytes compared to <code>==&quot;backspace&quot;</code> and 3 bytes compared to <code>grepl(&quot;ba&quot;,)</code>.</p>
 </div>
-<div id="pu3" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> 80 bytes</h1>
+<div id="pu4" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> 80 bytes</h1>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=return!value[3]&amp;&amp;!!((c=event.which)==8|47&lt;c&amp;c&lt;58)</code></pre>
@@ -146,7 +164,7 @@ wait until&lt;not&lt;key(any v)pressed?
 <li>'preparation characters' (aka <code>'&quot;`~^</code>) also still seem to work unfortunately, even beyond four characters..</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1>Java 21, 212 bytes</h1>
+<div id="pu5" class="pu"><h1>Java 21, 212 bytes</h1>
 <p>A graphical solution with AWT. The output is displayed in the window title.
 At least on Windows 10, you need to resize the window so you can see the title, or look at the taskbar etc.</p>
 <p><a href="https://i.sstatic.net/mLVal3HD.gif" rel="nofollow noreferrer"><img src="https://i.sstatic.net/mLVal3HD.gif" alt="demo of the window with an on-screen keyboard" /></a></p>
@@ -174,7 +192,7 @@ At least on Windows 10, you need to resize the window so you can see the title, 
 }}::show // show the frame when called
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://en.wikipedia.org/wiki/QBasic" rel="nofollow noreferrer">QBasic</a>, 83 bytes</h1>
 <pre><code>CLS
 1c=ASC(INPUT$(1))
 d=d-(d&gt;0)*(c=8)+(c&gt;47)*(c&lt;58)
@@ -209,14 +227,6 @@ PRINT STRING$(d, 42)
 </code></pre>
 <p>If the number does not have four digits yet, go back to line 1 and input another character. Otherwise, the program is over and halts.</p>
 <p>The leading <code>CLS</code> is perhaps not necessary. Without it, the screen initially shows the results of the last program run, and it is only cleared once the user presses their first key. Since this includes <em>any</em> key, not just the number &amp; backspace keys, I thought it probably ran afoul of &quot;All other key presses should be ignored,&quot; so I included an initial clear-screen just in case.</p>
-</div>
-<div id="pu6" class="pu"><h1>Python, 101 bytes</h1>
-<pre><code>import sys;s=0
-while s&lt;4:
- c=sys.stdin.read(1)
- s+=c.isdigit()-(c=='\x08')
- print(&quot;*&quot;*s+'  ',end='\r')
-</code></pre>
 </div>
 <div id="pu7" class="pu"><h1>x86 .COM opcode, 40 bytes</h1>
 <p>Not placing on left-to corner saves</p>
