--- a/q/275630.html
+++ b/q/275630.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
-<tr d-ix="1"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
-<tr d-ix="2"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
-<tr d-ix="3"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
-<tr d-ix="4"><td>080</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>077</td><td>HTML</td><td>240919T082944Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275634#275634">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>101</td><td>Python</td><td>240920T162502Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275662#275662">William</a></td></tr>
+<tr d-ix="2"><td>468</td><td>Rust</td><td>240921T115311Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275669#275669">bzr</a></td></tr>
+<tr d-ix="3"><td>424</td><td>TurboWarp</td><td>240921T121932Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275671#275671">SectorCo</a></td></tr>
+<tr d-ix="4"><td>080</td><td>R + cli</td><td>240921T104256Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275668#275668">Dominic </a></td></tr>
 <tr d-ix="5"><td>212</td><td>Java 21</td><td>240921T115556Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275670#275670">Juuz</a></td></tr>
 <tr d-ix="6"><td>083</td><td>QBasic</td><td>240919T182446Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275652#275652">DLosc</a></td></tr>
 <tr d-ix="7"><td>040</td><td>x86 .COM opcode</td><td>240919T071100Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275631#275631">l4m2</a></td></tr>
@@ -40,7 +40,36 @@
 <tr d-ix="11"><td>121</td><td>ZX Spectrum 48K/128K Basic</td><td>240919T164810Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275648#275648">Neil</a></td></tr>
 <tr d-ix="12"><td>125</td><td>Rust</td><td>240919T080224Z</td><td><a href="https://codegolf.stackexchange.com/questions/275630/enter-a-personal-identification-number/275632#275632">bzr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Python, 101 bytes</h1>
+<div id="pu0" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> <s>80</s> 77 bytes</h1>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=e=event;return!(value[3]||!++e.key&amp;e.which!=8)</code></pre>
+</div>
+</div>
+</p>
+<p>-54 bytes thanks to <em>@Shaggy</em>.<br />
+-10 bytes thanks to <em>@l4m2</em> and <em>@jdt</em>.<br />
+-3 bytes thanks to <em>@jdt</em> again.</p>
+<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
+<p><strong>Explanation:</strong></p>
+<ul>
+<li><code>&lt;input</code> - Input box</li>
+<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
+<li><code>onkeydown=</code> - Capture and handle key-presses</li>
+<li><code>e=event;</code> - Save <code>event</code> in variable <code>e</code>, since we'll use it twice later on</li>
+<li><code>return</code> - Return a boolean:</li>
+<li><code>!(...)</code> - By negating the following:</li>
+<li><code>value[3]</code> - Stop after the fourth digit has been entered</li>
+<li><code>||</code> - Otherwise:</li>
+<li><code>!++e.key&amp;e.which!=8</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (<code>e.key</code> range [0,9]; <code>e.which</code> codepoint range [48,57])</li>
+</ul>
+<p><em>Known issue<s>s</s>:</em></p>
+<ul>
+<li><s>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</s> EDIT: It works again since the 77 bytes version that uses <code>e.key</code> instead of <code>e.which</code> to check whether it's a digit.</li>
+<li>'preparation characters' (aka <code>'&quot;`~^</code>) still seem to work unfortunately (even beyond four characters)..</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1>Python, 101 bytes</h1>
 <pre><code>import sys;s=0
 while s&lt;4:
  c=sys.stdin.read(1)
@@ -58,7 +87,7 @@ while s&lt;4:
 </code></pre>
 <p>This second version uses <code>msvcrt</code>, which is only available on Windows, but it does not require raw input mode.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> 468 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.rust-lang.org" rel="nofollow noreferrer">Rust</a>, <s>484</s> 468 bytes</h1>
 <pre class="lang-rust prettyprint-override"><code>use std::io::{stdin,stdout,Write};use termion::{clear,cursor::Left,event::Key::{Backspace,Char,Esc},input::TermRead,raw::IntoRawMode};fn main(){let(mut o,mut s)=(stdout().into_raw_mode().unwrap(),format!(&quot;&quot;));for c in stdin().keys(){match c.unwrap(){Esc=&gt;break,Char(k)=&gt;{if &quot;0123456789&quot;.contains(k){write!(o,&quot;*&quot;).unwrap();s.push(k)}}Backspace=&gt;{write!(o,&quot;{}{}&quot;,Left(1),clear::AfterCursor).unwrap();s=s[..s.len()-1].into()}_=&gt;()}o.flush().unwrap();if s.len()&gt;3{break}}}
 </code></pre>
 <p>This solution uses <a href="https://crates.io/crates/termion" rel="nofollow noreferrer">Termion</a>, and so doesn't support Windows.</p>
@@ -97,7 +126,7 @@ fn main() {
 }
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://turbowarp.org" rel="nofollow noreferrer">TurboWarp</a>, 424 bytes</h1>
 <p><a href="https://turbowarp.org/1070983410" rel="nofollow noreferrer">Try it here.</a></p>
 <p>Key-presses are really hard to manage well.</p>
 <p><strong>NOTE:</strong> This will not work in Scratch, because <code>backspace</code> is only detectable in TurboWarp.</p>
@@ -129,40 +158,13 @@ wait until&lt;not&lt;key(any v)pressed?
 </code></pre>
 <p><a href="https://i.sstatic.net/mLHW6meD.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/mLHW6meD.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> + <code>cli</code>, <s>91</s> <s>84</s> 80 bytes</h1>
 
 <pre class="lang-r prettyprint-override"><code>while(F&lt;4){cat(c('\b \b','*')[x&lt;-(nchar(k&lt;-cli::keypress())&gt;8&amp;F)-k%in%0:9]);F=F-x}
 </code></pre>
 <p>(<code>\b</code> represents a single <code>08</code> byte in the source code)</p>
 <p>The <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> <code>cli</code> (command line interface) library indicates that <code>keypress()</code> &quot;currently only works at Linux/Unix and OSX terminals, and at the Windows command line&quot;, so unfortunately I don't know of an online site where this will run correctly.  It runs fine in my OSX terminal.</p>
 <p><code>keypress()</code> returns the character representing the key pressed, or a string representing 'special' keys, of which <code>&quot;backspace&quot;</code> is the only one with &gt;8 characters, so <code>nchar()&gt;8</code> saves 4 bytes compared to <code>==&quot;backspace&quot;</code> and 3 bytes compared to <code>grepl(&quot;ba&quot;,)</code>.</p>
-</div>
-<div id="pu4" class="pu"><h1>HTML, <s>150</s> <s>148</s> <s>134</s> <s>100</s> <s>94</s> <s>84</s> 80 bytes</h1>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=password onkeydown=return!value[3]&amp;&amp;!!((c=event.which)==8|47&lt;c&amp;c&lt;58)</code></pre>
-</div>
-</div>
-</p>
-<p>-54 bytes thanks to <em>@Shaggy</em>.<br />
--10 bytes thanks to <em>@l4m2</em> and <em>@jdt</em>.</p>
-<p>I'm still trying to find a browser that uses asterisk for password-fields instead of bullets (the four browsers I had installed - Chrome; Firefox; Edge; Opera - unfortunately all use bullets). But certain old browser versions defintely used asterisks for password input-fields, so it's assumed this snippet is used in one of those browsers / versions.</p>
-<p><strong>Explanation:</strong></p>
-<ul>
-<li><code>&lt;input</code> - Input box</li>
-<li><code>type=password</code> - Of type password, so every valid character that's typed (aka digits) will be shown as asterisks in certain browsers (in most modern browsers they'll be shown as bullet points instead, though)</li>
-<li><code>onkeydown=</code> - Capture and handle key-presses</li>
-<li><code>!value[3]</code> - Stop after the fourth digit has been entered</li>
-<li><code>&amp;&amp;</code> - Otherwise:</li>
-<li><code>!!(...)</code> - Cast the <code>0</code>/<code>1</code> to <code>false</code>/<code>true</code> (because in JavaScript, bitwise operations on booleans will convert them to bits, do we'll have to convert them back to booleans manually)</li>
-<li><code>(c=event.which)</code> - Save the current key pressed as codepoint integer in variable <code>c</code></li>
-<li><code>==8|47&lt;c&amp;c&lt;58</code> - If <code>c</code> is NOT a backspace (codepoint 8) nor a digit (codepoint range [48,57])</li>
-</ul>
-<p><em>Known issues:</em></p>
-<ul>
-<li>Shift + digits (aka <code>!@#$%&amp;*()</code>) seem to work again unfortunately, even though I explicitly fixed that in my initial 150 bytes version.</li>
-<li>'preparation characters' (aka <code>'&quot;`~^</code>) also still seem to work unfortunately, even beyond four characters..</li>
-</ul>
 </div>
 <div id="pu5" class="pu"><h1>Java 21, 212 bytes</h1>
 <p>A graphical solution with AWT. The output is displayed in the window title.
