--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240922T150419Z
+"   /golfscore                                      20240922T160319Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/90042.html">Print/Output all positive numbers in which every: 0090042</a>
 <a href="q/272425.html">Fixed Repeating Output                          : 0272425</a>
 <a href="q/275590.html">Play the Final Fantasy Prelude                  : 0275590</a>
 <a href="q/275630.html">Enter a personal identification number          : 0275630</a>
