--- a/q/275590.html
+++ b/q/275590.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
-<tr d-ix="1"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
-<tr d-ix="2"><td>343</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="0"><td>324</td><td>JavaScript</td><td>240920T204734Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275664#275664">rougepie</a></td></tr>
+<tr d-ix="1"><td>174</td><td>C GCC using OSS</td><td>240921T162403Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275674#275674">G. Sliep</a></td></tr>
+<tr d-ix="2"><td>320</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="3"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="4"><td>270</td><td>Javascript</td><td>240920T193816Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275663#275663">ccprog</a></td></tr>
 <tr d-ix="5"><td>280</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
@@ -36,7 +36,22 @@
 <tr d-ix="7"><td>290</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="8"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, 324 bytes</h1>
+<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
+<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
+<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
+<p>EDIT: I save some extra bytes by fixing the melody (thx @G.Sliepen ) and starting with <code>c=3</code> and using <code>110*2**(c/12)</code> to compute the frequency (thx @Neil). Thank to @Arnauld and @Fhuvi too!</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
+
+_=&gt;{a=new AudioContext();with(a.createOscillator()){c=3;[...`6${b="889b889b889b889b134413441344134"}1${d="87ab87ab87ab87ab125412541254125"}7${b}1${d}0${b}6${b}5${D="a9a7a9a7a9a7a9a7523252325232523"}2${D}`].map((u,i)=&gt;{frequency.setValueAtTime(110*2**(c/12),i*.19);c+=("0x"+u-6)});connect(a.destination);start();stop(48.64)}}</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
+</div>
+</div>
+</p>
+</div>
+<div id="pu1" class="pu"><h1>C (GCC) using OSS, <s>201</s> <s>197</s> <s>177</s> 174 bytes</h1>
 <pre><code>i;main(c,n,a){for(open(&quot;/dev/dsp&quot;,1);write(3,&amp;n,1);n=(a+=901*exp2(n/4+(&quot;047;02470237&quot;[n%4+(5732&gt;&gt;c*2&amp;12)]-&quot;,/,/310.&quot;[c])/12.))&gt;&gt;9)n=i++/1500,c=n/32%8,n%=32,n=n&gt;16?32-n:n;}
 </code></pre>
 <p>The score includes 3 bytes for the <code>-lm</code> compiler flag. It runs on any UNIX system with support for the Open Sound System (OSS), or any other sound system that provides compatibility with OSS. On modern Linux, you might have to <code>sudo modprobe snd_pcm_oss</code> if this is not done automatically already. If you compile with GCC 14 or later, you might need to pass the <code>-std=gnu89</code> flag, but earlier versions don't need it.</p>
@@ -56,7 +71,7 @@
 <p>It then calculates the change in phase per sample for the waveform at that frequency in fixed point format, and adds it to the phase accumulator  <code>a</code>. This is then converted to a byte to be send straight to the audio device, thus generating a sawtooth wave with the right frequency.</p>
 <p>This version loops (for at least six days).</p>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 320 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 320 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
 with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
@@ -74,25 +89,6 @@ stop(48.64)}}
 x=&gt;{a=new AudioContext
 with(a.createOscillator()){[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;frequency.setValueAtTime(440*2**(s-1.75),(t*32+i)*.19)
 for(i=0;i&lt;32;i++)p(i&lt;17?c[i%4]/12+(i/4|0):c[3-(i-1)%4]/12+((32-i)/4|0))})
-connect(a.destination)
-start()
-stop(48.64)}}</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
-</div>
-</div>
-</p>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript, 343 bytes</h1>
-<p>I used an array containing as many elements as there are notes to play, making sure that each element can be represented by a single hexadecimal character.</p>
-<p>This character represents a number of semitones of difference between this note and the previous note (except for the first element which is played as is)</p>
-<p>I then realized that some big chunks were repeated (those corresponding to the arpeggios in add2 and Maj7) and that I could factorize these portions of code</p>
-<p>EDIT: I save some extra bytes by fixing the melody (thx @G.Sliepen ) and starting with <code>c=3</code> and using <code>110*2**(c/12)</code> to compute the frequency (thx @Neil). Thank to @Arnauld too</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>h=`6${b="889b889b889b889b134413441344134"}1${d="87ab87ab87ab87ab125412541254125"}7${b}1${d}0${b}6${b}5${D="a9a7a9a7a9a7a9a7523252325232523"}2${D}`.split``.map(x=&gt;"0x"+x-6)
-f=()=&gt;{a=new AudioContext()
-with(a.createOscillator()){c=3
-h.map((u, i)=&gt;{frequency.setValueAtTime(110*2**(c/12),i*.19);c+=u})
 connect(a.destination)
 start()
 stop(48.64)}}</code></pre>
